--- a/Learn2CrackLogin1/local.properties
+++ b/Learn2CrackLogin1/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 21 18:48:16 PDT 2015
-sdk.dir=/Users/mansijoshi/Library/Android/sdk
+#Sat Apr 25 16:06:36 PDT 2015
+sdk.dir=C\:\\Users\\Manushi\\AppData\\Local\\Android\\sdk
