--- a/Learn2CrackLogin1/app/src/main/AndroidManifest.xml
+++ b/Learn2CrackLogin1/app/src/main/AndroidManifest.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.learn2crack"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.learn2crack"
+    android:versionCode="1"
+    android:versionName="1.0">
     <uses-sdk android:minSdkVersion="9"
-            android:targetSdkVersion="17"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-             
+        android:targetSdkVersion="17"/>
+    <application android:label="@string/app_name" android:icon="@drawable/ic3">
+
         <activity android:name="Login"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name="Register"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
 
         </activity>
 
         <activity android:name="Registered"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
 
         </activity>
 
 
         <activity android:name="Main"
-                  android:label="Learn2Crack USER PANEL">
+            android:label="Learn2Crack USER PANEL">
 
         </activity>
-       
+
         <activity android:name="PasswordReset"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
 
         </activity>
         <activity android:name="ChangePassword"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
 
         </activity>
 
@@ -45,7 +45,7 @@
         </activity>
         <activity android:name=".sensefall.TabBarExample"
             android:label="@string/app_name">
->
+            >
         </activity>
         <activity android:name="com.learn2crack.sensefall.ReadAccelData" />
         <activity android:name=".sensefall.Prediction">
@@ -65,7 +65,7 @@
                 android:value=".sensefall.FallDetection" />
         </activity>
     </application>
-     <!-- Allow to connect with internet and to know the current network state-->
+    <!-- Allow to connect with internet and to know the current network state-->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -73,5 +73,5 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  
+
 </manifest>
